--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -40,14 +40,17 @@
       {% endif %} -->
       <a href="{{ '/' | relative_url }}">Jenny Yang</a>
     </h1>
+    <div>
+      <img src="assets/img/avatar2.jpg"> 
       <p class="page__lead">
-          Oxford graduate of Computer Science & Philosophy searching for a gameplay programmer position!<br />
+          Oxford graduate of Computer Science & Philosophy searching for an AI / gameplay programmer position!<br />
           Skills: C++, Unity, Javascript, Java, HTML/CSS, SQL  <br />
-          <a href="">CV</a>&ensp;&ensp;||&ensp;
-          Email: jennyyangdev@gmail.com&ensp;||&ensp;
+          <a href="">CV</a>&ensp;||&ensp;
+          jennyyangdev@gmail.com&ensp;||&ensp;
           London, UK&ensp;||&ensp;
           <a href="https://www.linkedin.com/in/jennyyangcs/">LinkedIn</a>
       </p>
+    </div>
     {% if page.read_time %}
       <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
