fixing baseurl messup

--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -41,7 +41,7 @@
       <a href="{{ '/' | relative_url }}">Jenny Yang</a>
     </h1>
     <div>
-      <img src="{{ site.baseurl}}/assets/img/avatar2.jpg"> 
+      <img src="{{ site.url}}/assets/img/avatar2.jpg"> 
       <p class="page__lead">
           Oxford graduate of Computer Science & Philosophy searching for an AI / gameplay programmer position!<br />
           Skills: C++, Unity, Javascript, Java, HTML/CSS, SQL  <br />
