--- a/_layouts/unity.html
+++ b/_layouts/unity.html
@@ -9,6 +9,7 @@ layout: default
 {% endif %}
 
 <div id="main" role="main">
+  {% include masthead.html %}
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
