--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,11 +3,49 @@
 ---
 @charset "utf-8";
 
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
+
+article.page {
+    width: 100%;
+    img {
+        height:200px;
+    }
+}
+
+.greedy-nav .visible-links {
+    justify-content: none;
+}
+
+.archive {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+}
+
+.archive__item {
+    img {
+        width: 150px;
+        float: left;
+        margin-right: 10px;
+        border: whitesmoke;
+        border-radius:5px;
+        border-width:2px;
+        border-style:solid;
+    }
+}
+
+.archive__item-title {
+    margin-top: 1em;
+    padding-top: 5px;
+}
+
 .page__hero {
     background-color: #3A606E; 
     color: #fff; 
     padding-left: 2%;
     padding-top: 3%;
+    margin-bottom:0;
 
     img {
         height:120px;
@@ -16,8 +54,8 @@
         margin-bottom:20px;
         border: whitesmoke;
         border-radius:10px;
-        border-width:3px;
-        border-style:dotted;
+        border-width:1px;
+        border-style:dashed;
     }
 
     .page__title,
@@ -37,6 +75,3 @@
         }
     }
 }
-
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
