CV and map generation done

--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -45,7 +45,7 @@
       <p class="page__lead">
           Oxford graduate of Computer Science & Philosophy searching for an AI / gameplay programmer position!<br />
           Skills: C++, Unity, Javascript, Java, HTML/CSS, SQL  <br />
-          <a href="">CV</a>&ensp;||&ensp;
+          <a href="{{ site.url}}/assets/pdfs/Jenny Yang, Programming CV.pdf">CV</a>&ensp;||&ensp;
           jennyyangdev@gmail.com&ensp;||&ensp;
           London, UK&ensp;||&ensp;
           <a href="https://www.linkedin.com/in/jennyyangcs/">LinkedIn</a>
